istio/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
        - istio.memoryforcer.com
        - exchange.memoryforcer.com

  # - port:
  #     number: 443
  #     name: https
  #     protocol: HTTPS
  #   hosts:
  #   - istio.memoryforcer.com
  #   tls:
  #     mode: SIMPLE
  #     serverCertificate: /tmp/tls.crt
  #     privateKey: /tmp/tls.key
