istio/destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: echo-server-svc-destination
spec:
  host: echo-server-svc # == [svc:echo-server-svc].[ns:exchange-on-k8s].svc.cluster.local
  # trafficPolicy:
  #   loadBalancer:
  #     simple: LEAST_CONN
  subsets:
  - name: v1
    labels:
      version: v1 # pods with label version: v1 will receive traffic
  - name: v2
    labels:
      version: v2
    # trafficPolicy:
    #   loadBalancer:
    #     simple: LEAST_CONN
  - name: v3
    labels:
      version: v3
